applications/quay/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: quay
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - __PATCH__
      secretName: quay-tls
  rules:
    - host: __PATCH__
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: quay-quay-app
                port:
                  name: http
